# pgtls

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md  docker-compose.yml  run-e2e-tests.sh
.github/workflows/: build.yml  docker.yml  release.yml
docker/: e2e-test.sh  generate-certs.sh  pgtls-to-plaintext.toml  pgtls-to-tls.toml  postgres-tls.conf
docker/certs/: ca.crt  ca.key  client.crt  client.key  proxy.crt  proxy.key  server.crt  server.key
examples/: pgtls.service
fixtures/: test-cert.pem  test-key.pem
specs/: 000-background.md  001-architectural-overview.md  002-protocol-handling.md  003-tls-and-certificate-management.md  004-configuration.md  005-logging-and-observability.md  006-cli.md
src/: cert_manager.rs  config.rs  lib.rs  main.rs  protocol.rs  proxy.rs
tasks/: 001-project-setup-and-config.md  002-protocol-parsing.md  003-connection-handler-tls-to-plaintext.md  004-connection-handler-tls-to-tls.md  005-integration-testing.md  006-application-main-and-logging.md  README.md
tests/: proxy_tests.rs
tests/common/: mod.rs
