[package]
name = "pgtls"
version = "0.1.0"
authors = ["iberrufyl <iberrufyl@gmail.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/TODO"
homepage = "https://github.com/TODO"
description = """

"""
readme = "README.md"
categories = ["development-tools"]
keywords = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.0"
