[package]
name = "pgtls"
version = "0.1.0"
authors = ["iberrufyl <iberrufyl@gmail.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/TODO"
homepage = "https://github.com/TODO"
description = """

"""
readme = "README.md"
categories = ["development-tools"]
keywords = []

[[bin]]
name = "pgtls"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
anyhow = "1.0"
tokio = { version = "1.0", features = ["net", "io-util", "macros", "rt", "rt-multi-thread", "signal"] }
tokio-rustls = "0.25"
rustls = "0.22"
rustls-pemfile = "2.0"
rustls-pki-types = "1.0"
rustls-native-certs = "0.7"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
rcgen = "0.12"
